<resources>
    <string name="app_name">EnergyApp</string>
    <string name="correo_electronico">Correo electronico</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="contrase_a">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="todo">TODO</string>
    <string name="logo">Logo</string>
    <string name="bienvenido_a_nuestra_aplicaci_n">Bienvenido a nuestra aplicación!!</string>
    <string name="logoenergyapp">LOGOEnergyApp</string>
    <string name="LOGO">logo</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="id_de_dispositivo">ID de dispositivo</string>
    <string name="resumen">Resumen</string>
    <string name="tiempos">Tiempos</string>
    <string name="monitor">Monitor</string>
</resources>