<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#f2f0d3">

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="80dp"
        android:fontFamily="sans-serif"
        android:hint="@string/correo_electr_nico"
        android:paddingStart="10dp"
        android:background="@drawable/edittext_button"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:autofillHints=""
        tools:ignore="RtlSymmetry,VisualLintTextFieldSize"
        android:textColorHint="#6d8ead"/>


    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="290dp"
        android:layout_marginEnd="80dp"
        android:fontFamily="sans-serif"
        android:hint="@string/contrase_a"
        android:paddingStart="10dp"
        android:background="@drawable/edittext_button"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:autofillHints=""
        tools:ignore="RtlSymmetry,VisualLintTextFieldSize"
        android:textColorHint="#6d8ead"/>


    <Button
        android:id="@+id/loginButton"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="110dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="110dp"
        android:background="@drawable/button_rounded"
        android:onClick="goToMainActivity"
        android:text="@string/iniciar_sesion"
        android:textColor="#fff"
        android:textSize="16sp"
        tools:ignore="TextSizeCheck,VisualLintButtonSize" />


    <Button
        android:id="@+id/registerButton"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="120dp"
        android:background="@drawable/button_rounded2"
        android:onClick="goToRegisterActivity"
        android:text="@string/registrarse"
        android:textColor="#fff"
        android:textSize="14sp"
        tools:ignore="TextSizeCheck,VisualLintButtonSize" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logoenergyapp"
        android:scaleType="fitCenter"
        android:scaleX="0.6"
        android:scaleY="0.6"
        android:src="@drawable/logoblack" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:elevation="10dp" />

</RelativeLayout>
