<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#f2f0d3">

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="80dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edittext_button"
        android:hint="@string/nombre_completo"
        android:paddingStart="10dp"
        android:inputType="text"
        android:textColor="#000000"
        android:textColorHint="#6d8ead"
        tools:ignore="RtlSymmetry" />



    <EditText
        android:id="@+id/emailEditTextRegister"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="80dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edittext_button"
        android:hint="@string/correo_electr_nico"
        android:paddingStart="10dp"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textColorHint="#6d8ead"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/passwordEditTextRegister"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="80dp"
        android:hint="@string/contrase_a"
        android:paddingStart="10dp"
        android:background="@drawable/edittext_button"
        android:inputType="textPassword"
        android:fontFamily="sans-serif"
        android:autofillHints=""
        tools:ignore="HardcodedText,RtlSymmetry,VisualLintTextFieldSize"
        android:textColorHint="#6d8ead"
        />

    <EditText
        android:id="@+id/deviceIDText"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="80dp"
        android:hint="@string/id_de_dispositivo"
        android:paddingStart="10dp"
        android:background="@drawable/edittext_button"
        android:inputType="text"
        android:fontFamily="sans-serif"
        android:autofillHints=""
        tools:ignore="HardcodedText,RtlSymmetry,VisualLintTextFieldSize"
        android:textColorHint="#6d8ead"
        />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="110dp"
        android:layout_marginTop="330dp"
        android:layout_marginEnd="110dp"
        android:background="@drawable/button_rounded"
        android:text="Registrar"
        android:textColor="#fff"
        android:textSize="18sp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="140dp"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="140dp"
        android:background="@drawable/button_rounded2"
        android:onClick="goToMainActivity"
        android:text="Volver"
        android:textColor="#fff"
        android:textSize="16sp"
        tools:ignore="TextSizeCheck,TextSizeCheck,VisualLintButtonSize" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logoenergyapp"
        android:scaleType="fitCenter"
        android:scaleX="1"
        android:scaleY="1"
        android:src="@drawable/logoblack" />


</RelativeLayout>
